--- a/view/header/1.html
+++ b/view/header/1.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="/example/dist/css/index.css">
-    <script src="/example/lib/jquery.min.js"></script>
-    <script src="/example/dist/js/header1.js"></script>
+    <link type="text/css" rel="stylesheet" href="../../dist/css/index.css">
+    <script src="../../lib/jquery.min.js"></script>
+    <script src="../../dist/js/header1.js"></script>
 </head>
 <body id="h1">
-    <div id="header">
+<div id="header" class="header">
+    <div class="logo"></div>
+    <div class="h-banner">
         <div class="h-box" v-for="list1 in result">
             <div class="h-title">{{list1.title}}</div>
             <div class="h-list">
@@ -17,7 +19,7 @@
             </div>
         </div>
     </div>
-
+</div>
 
 </body>
 </html>
