--- a/view/header/2.html
+++ b/view/header/2.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="./dist/css/index.css">
-    <script src="./lib/jquery.min.js"></script>
-    <script src="./dist/js/header2.js"></script>
+    <link type="text/css" rel="stylesheet" href="../../dist/css/index.css">
+    <script src="../../lib/jquery.min.js"></script>
+    <script src="../../dist/js/header1.js"></script>
 </head>
-<body id="index">
-<div class="example-box" v-for="list1 in result">
-    <div class="example-title">
-        {{list1.title}}
-    </div>
-    <div class="example-list" v-for="list2 in list1.list">
-        <a href="{{list2.href}}">{{list2.name}}</a>
+<body id="h1">
+<div id="header" class="header h-1">
+    <div class="logo logo1"></div>
+    <div class="h-banner1">
+        <div class="h-box1" v-for="list1 in result">
+            <div class="h-title1">{{list1.title}}</div>
+            <div class="h-list1">
+                <a class="h-item1" v-for="list2 in list1.list">{{list2.name}}</a>
+            </div>
+        </div>
     </div>
 </div>
-
 
 </body>
 </html>
