--- a/view/header/2.html
+++ b/view/header/2.html
@@ -13,9 +13,11 @@
     <div class="logo logo1"></div>
     <div class="h-banner1">
         <div class="h-box1" v-for="list1 in result">
+            <div class="h-box-item1">
             <div class="h-title1">{{list1.title}}</div>
             <div class="h-list1">
                 <a class="h-item1" v-for="list2 in list1.list">{{list2.name}}</a>
+            </div>
             </div>
         </div>
     </div>
