--- a/view/banner/1.html
+++ b/view/banner/1.html
@@ -6,19 +6,11 @@
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="../../dist/css/index.css">
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../dist/js/header.js"></script>
+    <script src="../../dist/js/banner.js"></script>
 </head>
 <body id="h1">
 <div id="header" class="header">
     <div class="logo"></div>
-    <div class="h-banner">
-        <div class="h-box" v-for="list1 in result">
-            <div class="h-title">{{list1.title}}</div>
-            <div class="h-list">
-                <a class="h-item" v-for="list2 in list1.list">{{list2.name}}</a>
-            </div>
-        </div>
-    </div>
 </div>
 
 </body>
