--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,7 +18,7 @@
     position: fixed;
     right: 30px;
     bottom: 30px;
-
+    cursor: pointer;
     text-align: center;
     line-height: 60px;
     background-color: #000;
@@ -98,26 +98,69 @@
 .h-1{
     height: 202px;
 }
+.h-1 .logo{
+    margin-top: 60px;
+}
 .h-banner1{
     float: right;
 }
 .h-box1{
-    width: 20px;
+    width: 30px;
     height: 202px;
-    vertical-align: bottom;
+
     float: left;
     color: #fff;
     overflow: hidden;
-
+    position: relative;
+    transition:all .5s;
+}
+.h-box1:hover{
+    width: 130px;
 }
 .h-box-item1{
-
+    position: absolute;
+    left: 0;
+    top:0;
+    height: 202px;
+    width:130px
 }
 .h-title1{
-    width: 20px;
+    width: 30px;
+    text-align: center;
     height: 202px;
-    loat: left;
+    float: left;
+    line-height: 202px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 18px;
+}
+.h-title1>span{
+    width: 20px;
+    text-align: center;
+    height: 202px;
+    display: inline-block;
+    line-height: normal;
 }
 .h-list1{
     float: left;
+    width: 100px;
+    height: 202px;
+    text-align: center;
+}
+
+.h-item1{
+    width: 20px;
+    height: 202px;
+    line-height: 242px;
+    text-align: center;
+    float: left;
+    cursor: pointer;
+
+}
+.h-item1>a{
+    width: 20px;
+    text-align: center;
+    height: 202px;
+    display: inline-block;
+    line-height: normal;
 }
