--- a/view/header/2.html
+++ b/view/header/2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="../../dist/css/index.css">
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../dist/js/header1.js"></script>
+    <script src="../../dist/js/header.js"></script>
 </head>
 <body id="h1">
 <div id="header" class="header h-1">
@@ -14,9 +14,9 @@
     <div class="h-banner1">
         <div class="h-box1" v-for="list1 in result">
             <div class="h-box-item1">
-            <div class="h-title1">{{list1.title}}</div>
+            <div class="h-title1"><span>{{list1.title}}</span></div>
             <div class="h-list1">
-                <a class="h-item1" v-for="list2 in list1.list">{{list2.name}}</a>
+                <div class="h-item1" v-for="list2 in list1.list"><a>{{list2.name}}</a></div>
             </div>
             </div>
         </div>
