--- a/view/header/1.html
+++ b/view/header/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="../../dist/css/index.css">
+    <link type="text/css" rel="stylesheet" href="../../dist/css/header1.css">
     <script src="../../lib/jquery.min.js"></script>
     <script src="../../dist/js/header.js"></script>
 </head>
