--- a/view/banner/1.html
+++ b/view/banner/1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="../../dist/css/banner.css">
+    <link type="text/css" rel="stylesheet" href="../../dist/css/banner1.css">
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../dist/js/banner.js"></script>
+    <script src="../../dist/js/banner1.js"></script>
 </head>
 <body id="h1">
 <div id="header" class="header">
