--- a/view/header/2.html
+++ b/view/header/2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="../../dist/css/header2.css">
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../dist/js/header.js"></script>
+    <script src="../../dist/js/header2.js"></script>
 </head>
 <body id="h1">
 <div id="header" class="header h-1">
