--- a/src/css/banner/2.less
+++ b/src/css/banner/2.less
@@ -1,5 +1,6 @@
 @sw: 300px;
 @fonts: 20px;
+@color3:#333;
 .swiper-container {
   height: @sw;
 
@@ -7,7 +8,7 @@
     height: @sw;
     .swiper-slide {
       height: @sw;
-      color: #333;
+      color: @color3;
       text-align: center;
       line-height: @sw;
       font-size: @fonts;
