--- a/src/css/banner/2.less
+++ b/src/css/banner/2.less
@@ -1,4 +1,5 @@
 @sw: 300px;
+@sw1:200px;
 @fonts: 20px;
 @color3:#333;
 .swiper-container {
@@ -12,6 +13,7 @@
       text-align: center;
       line-height: @sw;
       font-size: @fonts;
+      width:50%;
     }
   }
 }
