--- a/view/banner/3.html
+++ b/view/banner/3.html
@@ -12,24 +12,27 @@
 <div id="header" class="header">
     <div class="logo"></div>
 </div>
-<!-- Slider main container -->
-<div class="swiper-container" id="swiper">
+<div id="swiper_box">
+    <!-- Slider main container -->
+    <div class="swiper-container" id="swiper">
 
-    <div class="swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide" v-for="list in result" :style="{'backgroundColor':list.pic}" >{{list.name}}</div>
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide" v-for="list in result" :style="{'backgroundColor':list.pic}">{{list.name}}</div>
 
 
+        </div>
+
+        <div class="swiper-pagination"></div>
+
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
     </div>
-
-    <div class="swiper-pagination"></div>
-
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-
-    <!-- If we need scrollbar -->
-    <div class="swiper-scrollbar"></div>
+    <div class="tips">{{result.tip}}</div>
 </div>
 </body>
 </html>
