--- a/view/banner/2.html
+++ b/view/banner/2.html
@@ -32,7 +32,7 @@
         <!-- If we need scrollbar -->
         <div class="swiper-scrollbar"></div>
     </div>
-    <div class="tips">{{result.tip}}</div>
+    <div class="tips">{{tip}}</div>
 </div>
 </body>
 </html>
