--- a/src/css/banner/2.less
+++ b/src/css/banner/2.less
@@ -1,18 +1,18 @@
-@sw: 300px;
-@sw1:200px;
-@fonts: 20px;
-@color3:#333;
+@import "../main.less";
+@import "../index.less";
+
+
 .swiper-container {
-  height: @sw;
+  height: @w300;
 
   .swiper-wrapper {
-    height: @sw;
+    height: @w300;
     .swiper-slide {
-      height: @sw;
-      color: @color3;
+      height: @w300;
+      color: @color4;
       text-align: center;
-      line-height: @sw;
-      font-size: @fonts;
+      line-height: @w300;
+      font-size: @fonts20;
       width:50%;
     }
   }
