--- a/src/css/header/header2.less
+++ b/src/css/header/header2.less
@@ -1,4 +1,5 @@
-
+@import "../main";
+@import "../index";
 
 .h-1{
     height: 202px;
@@ -14,7 +15,7 @@
     height: 202px;
 
     float: left;
-    color: #fff;
+    color: @color2;
     overflow: hidden;
     position: relative;
     transition:all .5s;
