--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,6 +1,7 @@
+@import "main";
 .header{
     height: 82px;
-    background-color: #000;
+    background-color: @color1;
 
 }
 .logo{
@@ -21,13 +22,13 @@
     cursor: pointer;
     text-align: center;
     line-height: 60px;
-    background-color: #000;
-    color: #fff;
+    background-color: @color1;
+    color: @color2;
 }
 .example-box{
     margin:0 10px;
     padding: 10px 0;
-    border-bottom: 1px solid #e8e8e8;
+    border-bottom: 1px solid @color3;
 }
 .example-title{
     font-size: 18px;
