--- a/src/css/header/header3.less
+++ b/src/css/header/header3.less
@@ -1,9 +1,5 @@
-.pre(@style,@value){
-  -webkit-@{style}: @value;
-  -moz-@{style}: @value;
-  -ms-@{style}: @value;
-    @{style}: @value;
-}
+@import "../main";
+@import "../index";
 .h-banner{
 
   float: right;
@@ -18,13 +14,13 @@
   font-size: 16px;
   font-weight: bold;
 
-  color: #fff;
+  color: @color2;
   cursor: pointer;
   position: relative;
   transition:all .5s;
   &:hover{
-    background-color: #fff;
-    color: #000;
+    background-color: @color2;
+    color: @color1;
     .h-list{
       display: block;
 
@@ -55,15 +51,14 @@
   height: 40px;
   line-height: 40px;
   display:block;
-
-  .pre(border-radius,5px);
+  border-radius:5px;
   float:left;
   width: 50%;
   text-align: center;
-  color: #fff;
+  color: @color2;
   transition:all .5s;
   &:hover{
-    background-color: #fff;
-    color: #000;
+    background-color: @color2;
+    color: @color1;
   }
 }
