--- a/src/css/main.less
+++ b/src/css/main.less
@@ -102,71 +102,68 @@ a:visited {
     /*background-position: center;*/
     /*background-size: 100% auto;*/
     border-radius: 3px;
+    >li{
+        position: absolute;
+        width: 4px;
+        height: 4px;
+        background-color: #67d8fd;
+        border-radius: 4px;
+        opacity: 0.2;
 
-
+        -webkit-animation: show1 0.8s infinite ease-in-out;
+    }
+    >li:first-child{
+        top:1px;
+        left:50%;
+        margin-left: -2px;
+        -webkit-animation-delay: -0.8s;
+    }
+    >li:nth-child(2){
+        right:5px;
+        top:5px;
+        -webkit-animation-delay: -0.7s;
+    }
+    >li:nth-child(3){
+        right: 1px;
+        top:50%;
+        margin-top: -2px;
+        -webkit-animation-delay: -0.6s;
+    }
+    >li:nth-child(4){
+        right:5px;
+        bottom:5px;
+        -webkit-animation-delay: -0.5s;
+    }
+    >li:nth-child(5){
+        bottom: 1px;
+        left:50%;
+        margin-left: -2px;
+        -webkit-animation-delay: -0.4s;
+    }
+    >li:nth-child(6){
+        left:5px;
+        bottom:5px;
+        -webkit-animation-delay: -0.3s;
+    }
+    >li:nth-child(7){
+        left: 1px;
+        top:50%;
+        margin-top: -2px;
+        -webkit-animation-delay: -0.2s;
+    }
+    >li:nth-child(8){
+        left:5px;
+        top:5px;
+        -webkit-animation-delay: -0.1s;
+    }
 }
 
-.small-loading>li{
-    position: absolute;
-    width: 4px;
-    height: 4px;
-    background-color: #67d8fd;
-    border-radius: 4px;
-    opacity: 0.2;
 
-    -webkit-animation: show1 0.8s infinite ease-in-out;
-}
 @-webkit-keyframes show1 {
     100%{
         opacity: 0.8;
     }
 }
-.small-loading>li:first-child{
-    top:1px;
-    left:50%;
-    margin-left: -2px;
-    -webkit-animation-delay: -0.8s;
-}
-.small-loading>li:nth-child(2){
-    right:5px;
-    top:5px;
-    -webkit-animation-delay: -0.7s;
-}
-.small-loading>li:nth-child(3){
-    right: 1px;
-    top:50%;
-    margin-top: -2px;
-    -webkit-animation-delay: -0.6s;
-}
-.small-loading>li:nth-child(4){
-    right:5px;
-    bottom:5px;
-    -webkit-animation-delay: -0.5s;
-}
-.small-loading>li:nth-child(5){
-    bottom: 1px;
-    left:50%;
-    margin-left: -2px;
-    -webkit-animation-delay: -0.4s;
-}
-.small-loading>li:nth-child(6){
-    left:5px;
-    bottom:5px;
-    -webkit-animation-delay: -0.3s;
-}
-.small-loading>li:nth-child(7){
-    left: 1px;
-    top:50%;
-    margin-top: -2px;
-    -webkit-animation-delay: -0.2s;
-}
-.small-loading>li:nth-child(8){
-    left:5px;
-    top:5px;
-    -webkit-animation-delay: -0.1s;
-}
-
-
 
 
 /*新弹窗*/
@@ -208,21 +205,20 @@ a:visited {
     text-align: center;
     margin-top: 20px;
 
-}
+    a {
+        display: inline-block;
+        padding: 15px 0px;
+        width: 50%;
+        color: #3399cc;
+        font-size: 100%;
+        box-sizing: border-box;
+        border-top: 1px solid rgba(237, 237, 237, 1);
+        &:nth-child(2) {
 
-.yalert-box-btn a {
-    display: inline-block;
-    padding: 15px 0px;
-    width: 50%;
-    color: #3399cc;
-    font-size: 100%;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(237, 237, 237, 1);
-}
+            border-left: 1px solid rgba(237, 237, 237, 1);
 
-.yalert-box-btn a:nth-child(2) {
-
-    border-left: 1px solid rgba(237, 237, 237, 1);
+        }
+    }
 
 }
 
@@ -330,3 +326,15 @@ a:visited {
     width: 33.3333333%;
     height: 100%;
 }
+@color1:#000;
+@color2:#fff;
+@color3:#e8e8e8;
+@color4:#333;
+
+@fonts20: 20px;
+@fonts14: 14px;
+@fonts18: 18px;
+
+@w300: 300px;
+@w200:200px;
+
