--- a/src/css/banner/1.less
+++ b/src/css/banner/1.less
@@ -1,23 +1,23 @@
 @import "../main.less";
-@import "../index.less";
-
-
 .swiper-container{
     height: @w300;
+    .swiper-wrapper{
+        height: @w300;
+        .swiper-slide{
+            height: @w300;
+            color: @color4;
+            text-align: center;
+            line-height:@w300;
+            font-size:@fonts20;
+            width: 100%;
+        }
+    }
+
 }
-.swiper-wrapper{
-    height: @w300;
-}
-.swiper-slide{
-    height: @w300;
-    color: @color4;
-    text-align: center;
-    line-height:@w300;
-    font-size:@fonts20;
-}
+
+
 .tips{
     margin-top: 50px;
     font-size:@fonts20;
-
 
 }
