--- a/src/css/banner/2.less
+++ b/src/css/banner/2.less
@@ -1,18 +1,12 @@
 @import "../main.less";
-@import "../index.less";
-
-
+@import "./1.less";
 .swiper-container {
-  height: @w300;
+
 
   .swiper-wrapper {
-    height: @w300;
+
     .swiper-slide {
-      height: @w300;
-      color: @color4;
-      text-align: center;
-      line-height: @w300;
-      font-size: @fonts20;
+
       width:50%;
     }
   }
