--- a/view/header/3.html
+++ b/view/header/3.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="../../dist/css/com.css">
     <link type="text/css" rel="stylesheet" href="../../dist/css/header3.css">
-    <script src="../../lib/jquery.min.js"></script>
+    <script src="../../dist/js/com.js"></script>
     <script src="../../dist/js/header1.js"></script>
 </head>
 <body id="h1">
