--- a/view/banner/3.html
+++ b/view/banner/3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="../../dist/css/banner2.css">
-    <script src="../../lib/jquery.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="../../dist/css/com.css">
+    <script src="../../dist/js/com.js"></script>
     <script src="../../dist/js/banner3.js"></script>
 </head>
 <body id="h1">
